Improve bit board